--- a/package.json
+++ b/package.json
@@ -10,5 +10,10 @@
   "scripts": {
     "publish": "npx lerna publish --conventional-commits -y --no-verify-access",
     "version": "yarn --mode=update-lockfile --no-immutable && git add yarn.lock"
+  },
+  "workspaces": {
+    "packages": [
+      "packages/*"
+    ]
   }
 }
