--- a/packages/pkg/package.json
+++ b/packages/pkg/package.json
@@ -2,5 +2,6 @@
   "name": "crapicrappackage",
   "version": "1.0.2",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "gitHead": "ec004649423e55ab410de1a5b2bb74f9acffdaf4"
 }
